--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.+'
     compile 'javax.mail:mail:1.4'
     compile "org.springframework:spring-jdbc:2+"
+    compile "org.projectlombok:lombok:1.16.10+"
 
 }
 
