--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,26 @@
-apply plugin: 'java';
-apply plugin: 'idea'
+plugins {
+    id 'java'
+    id 'net.ltgt.apt' version '0.10'
+}
 
-apply plugin: 'groovy'
+group 'java-tricks'
+version '1.0-SNAPSHOT'
 
-sourceCompatibility = '1.8'
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-
+    compileOnly 'org.projectlombok:lombok:1.18.2'
+    apt "org.projectlombok:lombok:1.18.2"
     testCompile group: 'junit', name: 'junit', version: '4.+'
-    compile 'javax.mail:mail:1.4'
     compile "org.springframework:spring-jdbc:2+"
-    compile "org.projectlombok:lombok:1.16.10+"
-
 }
 
-tasks.withType(JavaCompile) {
-    options.fork = true
-    options.forkOptions.executable = "/usr/lib/jvm/java-8-jdk/bin/javac"
-
-}
+//tasks.withType(JavaCompile) {
+//    options.fork = true
+//    options.forkOptions.executable = "/usr/bin/javac"
+//
+//}
